fixed wordwrapping, replaced obsolete marquee tags, fixed hyperlinks

--- a/style/indexStyle.css
+++ b/style/indexStyle.css
@@ -2,8 +2,32 @@
     width:100%;
     height:100%;
     margin:auto;
+    top:1.25em;
 }
-
+#nav{
+    width:100%;
+    height:1.25em; 
+    margin:auto;
+    position:fixed;
+    top:0;
+    background-color: #CCCCCC;
+    font-family: 'Roboto Mono', monospace;
+    color:#0C0C0C;
+    z-index: 1;
+    padding:0.15em;
+}
+.navlink{
+    color:#fff;
+    --color:#fff;
+    --original-color:#fff;
+    --link-color:#fff;
+}
+.navlink:hover{
+    background-color: #0F60FF;
+    background-color: var(--link-color, #0F60FF);
+    color: var(--background, #000) !important;
+    text-decoration: none;    
+}
 @media only screen
 and (min-width : 1224px) {
     body{
@@ -16,5 +40,56 @@ and (min-device-width : 320px)
 and (max-device-width : 480px) {
     body{
         --size: 3;
+    }
+}
+
+.bounce {
+    height: 11em;
+    overflow: hidden;
+    position: relative;
+    overflow-wrap: normal;
+}
+
+.bounce .contents {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    -moz-transform: translateX(50%);
+    -webkit-transform: translateX(50%);
+    transform: translateX(50%);
+    -moz-animation: bouncing-text 5s linear infinite alternate;
+    -webkit-animation: bouncing-text 5s linear infinite alternate;
+    animation: bouncing-text 10s linear infinite alternate;
+}
+
+@-moz-keyframes bouncing-text {
+    0% {
+        -moz-transform: translateX(50%);
+    }
+    100% {
+        -moz-transform: translateX(-50%);
+    }
+}
+
+@-webkit-keyframes bouncing-text {
+    0% {
+        -webkit-transform: translateX(50%);
+    }
+    100% {
+        -webkit-transform: translateX(-50%);
+    }
+}
+
+@keyframes bouncing-text {
+    0% {
+        -moz-transform: translateX(50%);
+        -webkit-transform: translateX(50%);
+        transform: translateX(50%);
+    }
+    100% {
+        -moz-transform: translateX(-50%);
+        -webkit-transform: translateX(-50%);
+        transform: translateX(-50%);
     }
 }
