--- a/style/vintage.css
+++ b/style/vintage.css
@@ -116,6 +116,7 @@ https://blog.carbonfive.com/2015/01/07/vintage-terminal-effect-in-css3/
     background-size: 100% .3rem;
     position: fixed;
     pointer-events: none;
+    z-index:2;
 }
 .scanlines:before {
   position: absolute;
